Fix news text block overlapping with the date.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -267,6 +267,7 @@ a.footnote
 .site-news-date
 {
     margin-right: 10px;
+    min-width: max-content;
 }
 
 @media (pointer: coarse)
